# arbind-tiltak-did

./: .gitignore  .pre-commit-config.yaml  analysedesign.md  justfile  pyproject.toml  task.md
.github/workflows/: build_and_publish.yml
quarto/: _quarto.yml  index.qmd
quarto/innsatsgrupper/: intro.qmd
quarto/regioner/: intro.qmd
quarto/regioner/alle-discrete/: report_alle-discrete.qmd
quarto/regioner/alle-kontinuerlig/: report_alle-kontinuerlig.qmd
quarto/regioner/faktisk-alle-kontinuerlig/: report_faktisk-alle-kontinuerlig.qmd
quarto/regioner/faktisk-gode-muligheter-kontinuerlig/: report_faktisk-gode-muligheter-kontinuerlig.qmd
quarto/regioner/faktisk-nedsatt-arbeidsevne-kontinuerlig/: report_faktisk-nedsatt-arbeidsevne-kontinuerlig.qmd
quarto/regioner/faktisk-trenger-veiledning-kontinuerlig/: report_faktisk-trenger-veiledning-kontinuerlig.qmd
quarto/regioner/forventet-alle-kontinuerlig/: report_forventet-alle-kontinuerlig.qmd
quarto/regioner/forventet-gode-muligheter-kontinuerlig/: report_forventet-gode-muligheter-kontinuerlig.qmd
quarto/trippel-diff/: intro.qmd
src/diff-in-diff/: analysis-config.yml  cluster_bootstrap.py  event_study.py  models.py  prep_data.py  regression.py  report.py  run_analysis.py
src/diff-in-diff/configs/: alle-discrete.yml  alle-kontinuerlig.yml  (+3 more)
src/exploratory/: lonnstilskudd_enheter.py  treatment_analysis.py
src/fetch_data/: get_antall_personer_fylke.py  get_fylke_data.py  get_indikator_fylke.py  merge_veiledning.py
src/utils/: csv_to_excel.py  publish.py
uttrekk/: alle_tiltak.sql  tiltak_innsatsgruppe.sql
(+25 files in other folders)
